# ICP-Bootcamp-Advanced-AI-GPT2

./: .gitignore  Cargo.toml  README.md  canbench.yml  dfx.json  package-lock.json  package.json
.devcontainer/: devcontainer.json
lib/model/: config.json  tokenizer.json
scripts/: postCreateSetup.sh
src/frontend/: index.html  index.js  main.css  package.json
src/model/: Cargo.toml  model.did
src/model/src/: auth.rs  benchmarks.rs  lib.rs
src/model/src/llm/: candle.rs  gpt2.rs  mask_cache.rs  mod.rs  sample.rs  tokenizer.rs
src/model/src/storage/: base.rs  instances.rs  mod.rs
