[package]
name = "model"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
anyhow = "1.0"
bytes = "1.5.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
candle = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", package = "candle-nn" }
tokenizers = { version = "0.20.1", default-features = false, features = ["unstable_wasm"] }
serde_json = "1.0.128"
half = "2.4.1"
ic-stable-structures = "0.6.7"
ic-wasi-polyfill = "0.6.4"
paste = "1.0"
canbench-rs = { version = "0.1.8", optional = true }


#[dev-dependencies]
#canbench = "0.1.8"